# crewai-report

./: .gitignore  README.md  pyproject.toml  requirements.txt
hackathon_report/: pyproject.toml
hackathon_report/src/hackathon_report/: crew.py  main.py
src/hackathon_report/: crew.py  main.py  utils.py
src/hackathon_report/config/: agents.yaml  tasks.yaml
